test/types/records/bugs/chainArgType2.good
chainArgType2.chpl:9: error: unresolved call 'foo(r1(int(64)), r1(real(64)))'
chainArgType2.chpl:5: note: this candidate did not match: foo(x: r1(?), y: x.type)
chainArgType2.chpl:9: note: because actual argument #2 with type 'r1(real(64))'
chainArgType2.chpl:5: note: is passed to formal 'y: r1(int(64))'
